--- a/GestaoImoveis/Views/Cliente/Create.cshtml
+++ b/GestaoImoveis/Views/Cliente/Create.cshtml
@@ -19,12 +19,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" class="form-control" placeholder="exemplo@gmail.com" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Cpf" class="control-label"></label>
-                <input asp-for="Cpf" class="form-control" />
+                <input asp-for="Cpf" class="form-control" id="cpf"/>
                 <span asp-validation-for="Cpf" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -45,4 +45,12 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#cpf').inputmask('999.999.999-99');
+        });
+    </script>
 }
+
+
