--- a/GestaoImoveis/Views/Imovel/Index.cshtml
+++ b/GestaoImoveis/Views/Imovel/Index.cshtml
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Ativo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cliente.Cpf)
+                @Html.DisplayFor(modelItem => item.Cliente.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
